--- a/silverpi/src/app/globals.css
+++ b/silverpi/src/app/globals.css
@@ -8,3 +8,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+@keyframes slideRight {
+  0% { transform: translateX(-100%); }
+  100% { transform: translateX(100%); }
+}
